Fix broken dataAlign feature due to previous bug fix

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -49,16 +49,11 @@
 }
 
 .graph-bar {
-  /* display: flex;
-  flex-wrap: wrap;
-  flex-direction: column-reverse;
-  justify-content: center; */
+  position: relative;
 }
 
 .graph-bar-inner {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  position: absolute;
   width: 100%;
 }
 
